--- a/styles/prototype.css
+++ b/styles/prototype.css
@@ -24,7 +24,7 @@ header {
 }
 .name {
     font-size: 28px;
-    margin-top: 0px;
+    margin: 0px;
 }
 
 .coder-text {
@@ -63,3 +63,22 @@ footer{
 .info p{
     margin: 10px;
 }
+@media screen and (min-width: 600px) {
+header {
+display: flex;
+align-items: flex-end;
+justify-content: space-between;
+}
+.logo-name{
+    margin-bottom: 0px;
+}
+nav {
+    width: 55%;
+}
+.social-media{
+width: 60%;
+margin-left: auto;
+margin-right: auto;
+}
+}
+    
